CPN 7.x-1.6, 2015-10-25
-----------------------
#2292521 by DamienMcKenna: Support newer versions of CodeMirror.
#2418809 by cyborg_572, DamienMcKenna: Wrong issue queue URL in README.txt file.
#2304521 by DamienMcKenna: Verify the library exists before loading it.
#2410691 by DamienMcKenna: Notify Varnish when files are saved.
#2361575 by kepford, DamienMcKenna: Optionally load the CSS/JS as 'external' to
  work around caching issues with some hosting platforms.
#2443219 by kepford, DamienMcKenna: Optional NOSCRIPT fields for nodes/blocks.
#2412369 by DamienMcKenna: Don't delete records if the user does not have
  permission to edit the node or block fields.
By DamienMcKenna: Added a note to README.txt about the panels_css_js module.


CPN 7.x-1.5, 2015-06-07
-----------------------
#2203659 by DamienMcKenna, Raines37: Removed variable interaction in
  cpn_requirements().
#2138539 by DamienMcKenna: Support for AdvAgg.
#2475637 by xiukun.zhou: README file had a typo.


CPN 7.x-1.5-rc1, 2014-02-22
---------------------------
By DamienMcKenna: Added a README.txt line about Token support.
By DamienMcKenna: Minor code syntax improvements, added more comments.
#1950522 by DamienMcKenna: Fixed the global CSS/JS file saving.
By DamienMcKenna: Sort the variable deletions in hook_uninstall().
#1967314 by DamienMcKenna: Standardized the D6/D7 settings forms.
#1964504 by DamienMcKenna: Separate CSS/JS wrappers for blocks vs nodes.
#1530396 by DamienMcKenna: Added a README.txt file.
By DamienMcKenna: Removed an unnecessary menu item that was accidentally added
  earlier.
#1955952 by DamienMcKenna: drupal_add_css/js calls were missing the options.
#1962350 by DamienMcKenna: Fixed the spelling of "JavaScript."
#1658932 by DamienMcKenna: Optionally process the output with tokens, if the
  Token module is installed the popup token browser will be available.
#1958236 by DamienMcKenna: Made all messages translatable.