@@ -3,9 +3,14 @@ description = Manage custom CSS & JavaScript per node and per block.
 core = 7.x
 configure = admin/config/content/cpn
 
-; Information added by Drupal.org packaging script on 2015-10-25
-version = "7.x-1.6"
+; Tests
+files[] = tests/cpn.helper.test
+files[] = tests/cpn.node.test
+; files[] = tests/cpn.block.test
+
+; Information added by Drupal.org packaging script on 2016-03-09
+version = "7.x-1.7"
 core = "7.x"
 project = "cpn"
-datestamp = "1445812898"
+datestamp = "1457551759"
 
